# py-protodb

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
example/: docker-compose.yml  repeated_scalar_container_adapter.py  test_example.py
example/config/: example.yaml  py-protodb.yaml
example/database/: example.sql  example_schema.dbs.bak  init.sql
py_protodb/: code_gen.py  config.py  database.py  main.py  postgres.py  postgres_datatypes.py  proto_gen.py  query_parser.py  schema.py  test_code_gen.py  test_postgres.py  test_proto_gen.py
tests/: py-protodb.yaml  test_code_gen.py  test_postgres.py  test_proto_gen.py
