[metadata]
name = py_protodb
version = 0.8.0
author = Bryan Hughes
author_email = hughesb@gmail.com
description = A protobuffer and CRUDL code generation tool from a PostgreSQL database
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
   source = https://github.com/bryanhughes/py-protodb
   tracker = https://github.com/bryanhughes/py-protodb/issues
classifiers =
   programming language :: Python :: 3
   license :: OSI Approved :: MIT License

[options]
python_requires = >=3.10
packages = find:

[options.packages.find]
exclude = tests

install_requires =
   psycopg
   sqlparse